@@ -3,10 +3,7 @@
 #' Format for creating submissions to Copernicus journals.
 #'
 #' @inheritParams rmarkdown::pdf_document
-#' @param ... Additional arguments to \code{base_format}
-#' @param base_format The function to use for the base format of the article.
-#'   By default, this is \code{rmarkdown::pdf_document}, but to use bookdown's
-#'   cross-referencing feature, this can be set to \code{bookdown::pdf_document2}
+#' @param ... Additional arguments to \code{rmarkdown::pdf_document()}.
 #' @param journal_name A regular expression to filter the by the journal name, see \code{pattern} in \code{\link[base]{grep}}; defaults to \code{*}.
 #'
 #' @return R Markdown output format to pass to
@@ -56,21 +53,15 @@
 copernicus_article <- function(...,
                          keep_tex         = TRUE,
                          citation_package = "natbib",
-                         base_format = rmarkdown::pdf_document,
                          md_extensions = c(
                            "-autolink_bare_uris", # disables automatic links, needed for plain email in \correspondence
                            "-auto_identifiers"    # disables \hypertarget commands
                            )) {
-  if (is.character(base_format)) {
-    FMT <- eval(parse(text = base_format))
-  } else {
-    FMT <- match.fun(base_format)
-  }
-  FMT(...,
-      citation_package = citation_package,
-      keep_tex = keep_tex,
-      md_extensions = md_extensions,
-      template = find_resource("copernicus_article", "template.tex"))
+  inherit_pdf_document(
+    ..., citation_package = citation_package, keep_tex = keep_tex,
+    md_extensions = md_extensions,
+    template = find_resource("copernicus_article", "template.tex")
+  )
 }
 
 # quick dev shortcut for Ubuntu: click "Install and restart" then run:
